# Operation_Sys_Lab3_MAI

./: .gitignore  CMakeLists.txt  README.md
include/: os.hpp  shared_data.hpp
report/: report(1).aux  report(1).tex
report/src/: benchmark(1).tex  literature(1).tex  problem(1).tex  src(1).tex  thinks(1).tex  titlepage(1).tex
src/: child1.cpp  child2.cpp  os.cpp  parent.cpp
